--- a/MoviePage.html
+++ b/MoviePage.html
@@ -103,22 +103,30 @@
               <hr />
 
               <a href="ProfilePage.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/profile.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/666/666201.png"
+                />
                 <p>Profile</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/setting.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png"
+                />
                 <p>Setting</p>
                 <span>></span>
               </a>
               <a href="ContactUs.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/contact.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/7269/7269995.png"
+                />
                 <p>Contact Us</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/logout.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/56/56805.png"
+                />
                 <p>Logout</p>
                 <span>></span>
               </a>
@@ -142,97 +150,97 @@
             <ul class="filter-list">
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" id="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">All</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Action</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Adventure</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Animation</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Comedy</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Crime</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Drama</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Fantasy</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Horror</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Mystery</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Romance</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Sci-Fi</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Thriller</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">War</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Western</span>
                 </label>
               </li>
               <li class="genre-filter-item">
                 <label>
-                  <input type="checkbox" />
+                  <input type="checkbox" class="ui-checkbox" />
                   <span class="filter-label">Biography</span>
                 </label>
               </li>
@@ -2711,7 +2719,7 @@
         </div>
       </div>
     </div>
-    <nav aria-label="Page-navigation">
+    <div aria-label="Page-navigation">
       <ul class="pagination justify-content-center">
         <li class="page-item disabled">
           <a class="page-link">Previous</a>
@@ -2726,7 +2734,7 @@
           <a class="page-link" href="#">Next</a>
         </li>
       </ul>
-    </nav>
+    </div>
 
     <footer class="footer">
       <div class="container">
