--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -99,22 +99,30 @@
               <hr />
 
               <a href="ProfilePage.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/profile.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/666/666201.png"
+                />
                 <p>Profile</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/setting.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png"
+                />
                 <p>Setting</p>
                 <span>></span>
               </a>
               <a href="ContactUs.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/contact.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/7269/7269995.png"
+                />
                 <p>Contact Us</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/logout.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/56/56805.png"
+                />
                 <p>Logout</p>
                 <span>></span>
               </a>
@@ -124,13 +132,11 @@
       </div>
     </nav>
 
-    <div class="welcome-box">
-      <div class="welcom-container">
-        <div class="welcome-text">
-          <p>Hi, Nick</p>
-        </div>
-      </div>
+    <div class="welcome-box"></div>
+    <div class="welcome-message">
+      <h1 class="welcome-text">Hi,Nick</h1>
     </div>
+
     <div class="wrapper-container">
       <div class="wrapper">
         <form action="">
@@ -166,6 +172,7 @@
         </div>
       </div>
     </div>
+
     <footer class="footer">
       <div class="footer-container">
         <hr />
@@ -174,12 +181,6 @@
         <p><a href="#">Terms of Service</a></p>
       </div>
     </footer>
-    <script>
-      let subMenu = document.getElementById("subMenu");
-      function toggleMenu() {
-        subMenu.classList.toggle("open-menu");
-      }
-    </script>
 
     <script src="./JS/darkMode.js"></script>
   </body>
