--- a/TV-Show.html
+++ b/TV-Show.html
@@ -103,22 +103,30 @@
               <hr />
 
               <a href="ProfilePage.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/profile.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/666/666201.png"
+                />
                 <p>Profile</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/setting.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png"
+                />
                 <p>Setting</p>
                 <span>></span>
               </a>
               <a href="ContactUs.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/contact.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/7269/7269995.png"
+                />
                 <p>Contact Us</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/logout.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/56/56805.png"
+                />
                 <p>Logout</p>
                 <span>></span>
               </a>
