--- a/Watchlist.html
+++ b/Watchlist.html
@@ -102,24 +102,31 @@
                 </div>
               </div>
               <hr />
-
               <a href="ProfilePage.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/profile.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/666/666201.png"
+                />
                 <p>Profile</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/setting.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png"
+                />
                 <p>Setting</p>
                 <span>></span>
               </a>
               <a href="ContactUs.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/contact.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/7269/7269995.png"
+                />
                 <p>Contact Us</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/logout.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/56/56805.png"
+                />
                 <p>Logout</p>
                 <span>></span>
               </a>
@@ -154,6 +161,14 @@
       <div id="movie-list">
         <div class="movie-item" data-movie-id="1">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg"
               alt="Movie 2 Poster"
@@ -239,6 +254,14 @@
 
         <div class="movie-item" data-movie-id="2">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/kbHlxmkVKDQrBXrKkh0nuIr4rSZ.jpg"
               alt="Movie 2 Poster"
@@ -274,6 +297,14 @@
 
         <div class="movie-item" data-movie-id="3">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
               alt="Movie 2 Poster"
@@ -309,6 +340,14 @@
 
         <div class="movie-item">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/mGK4FCfdJ3qUi848RcrheqdRsPk.jpg"
               alt="Movie 2 Poster"
@@ -344,6 +383,14 @@
 
         <div class="movie-item">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/7lLJgKnAicAcR5UEuo8xhSMj18w.jpg"
               alt="Movie 2 Poster"
@@ -379,6 +426,14 @@
 
         <div class="movie-item">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/kUJDlvh4pLqNwMRT8Q4aHjgb7zq.jpg"
               alt="Movie 2 Poster"
@@ -2513,6 +2568,14 @@
 
         <div class="movie-item">
           <div class="movie-content">
+            <div class="dropdown-container" tabindex="-1">
+              <div class="dots">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </div>
+              <div class="dropdown">
+                <a href="#"><div>Plan to Watch</div></a>
+              </div>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/aPqcQwu4VGEewPhagWNncDbJ9Xp.jpg"
               alt="Movie 2 Poster"
