--- a/index.html
+++ b/index.html
@@ -104,22 +104,30 @@
               <hr />
 
               <a href="ProfilePage.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/profile.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/666/666201.png"
+                />
                 <p>Profile</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/setting.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png"
+                />
                 <p>Setting</p>
                 <span>></span>
               </a>
               <a href="ContactUs.html" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/contact.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/7269/7269995.png"
+                />
                 <p>Contact Us</p>
                 <span>></span>
               </a>
               <a href="#" class="sub-menu-link">
-                <img src="./Images/Icons/profile-menu-img/logout.png" />
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/56/56805.png"
+                />
                 <p>Logout</p>
                 <span>></span>
               </a>
@@ -222,6 +230,9 @@
       <div id="movie-list">
         <div class="movie-item" data-movie-id="1">
           <div class="movie-content">
+            <div class="new-label">
+              <p>New</p>
+            </div>
             <img
               src="https://www.themoviedb.org/t/p/original/8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg"
               alt="Movie 2 Poster"
@@ -1294,7 +1305,7 @@
             <h2 class="movie-title">The Hurricane</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">User Rating: TBA</span>
+                <span class="movie-rating-text">User Rating: 10.0</span>
               </div>
               <span class="movie-year-text">1999</span>
             </div>
@@ -1329,7 +1340,7 @@
             <h2 class="movie-title">Crimson Tide</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">User Rating: TBA</span>
+                <span class="movie-rating-text">User Rating: 6.9</span>
               </div>
               <span class="movie-year-text">1995</span>
             </div>
@@ -1399,7 +1410,7 @@
             <h2 class="movie-title">Mrs. Doubtfire</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">User Rating: TBA</span>
+                <span class="movie-rating-text">User Rating: 9.2</span>
               </div>
               <span class="movie-year-text">1993</span>
             </div>
@@ -1644,7 +1655,7 @@
             <h2 class="movie-title">Demolition Man</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">User Rating: TBA</span>
+                <span class="movie-rating-text">User Rating: 9.0</span>
               </div>
               <span class="movie-year-text">1993</span>
             </div>
@@ -2022,6 +2033,146 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://www.themoviedb.org/t/p/original/iLWsLVrfkFvOXOG9PbUAYg7AK3E.jpg"
+              alt="Movie 2 Poster"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Sleepless in Seattle</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">User Rating: TBA</span>
+              </div>
+              <span class="movie-year-text">1993</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/yUpiEk2EojS9ZEXb3nIQonQCYYF.jpg"
+              alt="Movie 2 Poster"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Sleepers</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">User Rating: TBA</span>
+              </div>
+              <span class="movie-year-text">1996</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/wWU3JEXXfUxrwvVANysGPovGF7.jpg"
+              alt="Movie 2 Poster"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">A Time to Kill</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">User Rating: TBA</span>
+              </div>
+              <span class="movie-year-text">1996</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/hQtKB7wU2BDAtdnpGSzFCoZjKie.jpg"
+              alt="Movie 2 Poster"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Ghost</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">User Rating: TBA</span>
+              </div>
+              <span class="movie-year-text">1990</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/cYKszbvn7Gj3DjNqApGKAMHSFkc.jpg"
               alt="Movie 2 Poster"
               class="movie-poster"
@@ -2064,7 +2215,7 @@
             <h2 class="movie-title">True Lies</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">User Rating: TBA</span>
+                <span class="movie-rating-text">User Rating: 9.6</span>
               </div>
               <span class="movie-year-text">1994</span>
             </div>
@@ -2625,6 +2776,22 @@
             allowfullscreen
           ></iframe>
         </div>
+      </div>
+      <div aria-label="Page-navigation">
+        <ul class="pagination justify-content-center">
+          <li class="page-item disabled">
+            <a class="page-link">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">4</a></li>
+          <li class="page-item"><a class="page-link" href="#">5</a></li>
+          <li class="page-item"><a class="page-link" href="#">...</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
       </div>
     </div>
 
