--- a/MoviePage.html
+++ b/MoviePage.html
@@ -311,18 +311,20 @@
         <div id="movie-list">
           <div class="movie-item" data-movie-id="1">
             <div class="movie-content">
-              <a href="MovieTemplate.html">
-                <img
-                  src="https://www.themoviedb.org/t/p/original/8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg"
-                  alt="Movie 2 Poster"
-                  class="movie-poster"
-              /></a>
+              <div class="new-label">
+                <p>New</p>
+              </div>
+              <img
+                src="https://www.themoviedb.org/t/p/original/8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
               <h2 class="movie-title">
                 <a href="MovieTemplate.html">Oppenhimer</a>
               </h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 10.0</span>
+                  <span class="movie-rating-text">User Rating: 9.2</span>
                 </div>
                 <span class="movie-year-text">2023</span>
               </div>
@@ -1384,7 +1386,7 @@
               <h2 class="movie-title">The Hurricane</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 10.0</span>
                 </div>
                 <span class="movie-year-text">1999</span>
               </div>
@@ -1419,7 +1421,7 @@
               <h2 class="movie-title">Crimson Tide</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 6.9</span>
                 </div>
                 <span class="movie-year-text">1995</span>
               </div>
@@ -1489,7 +1491,7 @@
               <h2 class="movie-title">Mrs. Doubtfire</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.2</span>
                 </div>
                 <span class="movie-year-text">1993</span>
               </div>
@@ -1594,7 +1596,7 @@
               <h2 class="movie-title">Contact</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.5</span>
                 </div>
                 <span class="movie-year-text">1997</span>
               </div>
@@ -1629,7 +1631,7 @@
               <h2 class="movie-title">Dante's Peak</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.5</span>
                 </div>
                 <span class="movie-year-text">1997</span>
               </div>
@@ -1664,7 +1666,7 @@
               <h2 class="movie-title">The Fugitive</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.5</span>
                 </div>
                 <span class="movie-year-text">1993</span>
               </div>
@@ -1734,7 +1736,7 @@
               <h2 class="movie-title">Demolition Man</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.0</span>
                 </div>
                 <span class="movie-year-text">1993</span>
               </div>
@@ -1874,7 +1876,7 @@
               <h2 class="movie-title">Last Action Hero</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.5</span>
                 </div>
                 <span class="movie-year-text">1993</span>
               </div>
@@ -1979,7 +1981,7 @@
               <h2 class="movie-title">Speed</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.4</span>
                 </div>
                 <span class="movie-year-text">1994</span>
               </div>
@@ -2014,7 +2016,7 @@
               <h2 class="movie-title">Point Break</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.1</span>
                 </div>
                 <span class="movie-year-text">1990</span>
               </div>
@@ -2049,7 +2051,7 @@
               <h2 class="movie-title">The Devil's Advocate</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.4</span>
                 </div>
                 <span class="movie-year-text">1997</span>
               </div>
@@ -2112,6 +2114,181 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://www.themoviedb.org/t/p/original/iLWsLVrfkFvOXOG9PbUAYg7AK3E.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Sleepless in Seattle</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">User Rating: TBA</span>
+                </div>
+                <span class="movie-year-text">1993</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/yUpiEk2EojS9ZEXb3nIQonQCYYF.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Sleepers</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">User Rating: TBA</span>
+                </div>
+                <span class="movie-year-text">1996</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/wWU3JEXXfUxrwvVANysGPovGF7.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">A Time to Kill</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">User Rating: TBA</span>
+                </div>
+                <span class="movie-year-text">1996</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/hQtKB7wU2BDAtdnpGSzFCoZjKie.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Ghost</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">User Rating: TBA</span>
+                </div>
+                <span class="movie-year-text">1990</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/kC9klqmRmXtHTwS8LQkNhuRcl4y.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Event Horizon</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">User Rating: TBA</span>
+                </div>
+                <span class="movie-year-text">1997</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/cYKszbvn7Gj3DjNqApGKAMHSFkc.jpg"
                 alt="Movie 2 Poster"
                 class="movie-poster"
@@ -2119,7 +2296,7 @@
               <h2 class="movie-title">Constantine</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.5</span>
                 </div>
                 <span class="movie-year-text">2005</span>
               </div>
@@ -2154,7 +2331,7 @@
               <h2 class="movie-title">True Lies</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text">User Rating: 9.6</span>
                 </div>
                 <span class="movie-year-text">1994</span>
               </div>
