--- a/LoginPage.html
+++ b/LoginPage.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
+    <link
+      rel="icon"
+      href="./images/Logo/movie-logo.png"
+      type="image/icon type"
+    />
     <link rel="stylesheet" href="LoginPageStyle.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
