--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <title>Profile Page</title>
+    <link
+      rel="icon"
+      href="./images/Logo/movie-logo.png"
+      type="image/icon type"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="ProfilePageStyle.css" rel="stylesheet" />
@@ -12,6 +17,10 @@
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
   <body>
@@ -131,54 +140,172 @@
         </div>
       </div>
     </nav>
-
-    <div class="welcome-box"></div>
-    <div class="welcome-message">
-      <h1 class="welcome-text">Hi,Nick</h1>
-    </div>
-
-    <div class="wrapper-container">
-      <div class="wrapper">
-        <form action="">
-          <h1>Edit Profile</h1>
-          <div class="input-box">
-            <input type="text" placeholder="Email Address" required />
-            <i class="bx bxs-user"></i>
-          </div>
-          <div class="input-box">
-            <input type="text" placeholder="Name" required />
-            <i class="bx bxs-user"></i>
-          </div>
-
-          <div class="input-box">
-            <input type="password" placeholder="Password" required />
-            <i class="bx bxs-lock-alt"></i>
-          </div>
-          <div class="Change-Password">
-            <div class="icon-container">
-              <i class="bx bxs-key"></i>
+    <div class="content">
+      <div class="welcome-box"></div>
+      <div class="wrapper-container">
+        <div class="welcome-message">
+          <h1 class="welcome-text">Hi, Nick</h1>
+        </div>
+        <div class="wrapper">
+          <form action="">
+            <h1>Edit Profile</h1>
+            <div class="input-box">
+              <input type="text" placeholder="Email Address" required />
+              <i class="bx bxs-user"></i>
             </div>
-            <a href="#">Change password</a>
-          </div>
-          <button type="submit" class="btn">Save</button>
-        </form>
+            <div class="input-box">
+              <input type="text" placeholder="Name" required />
+              <i class="bx bxs-user"></i>
+            </div>
 
-        <div class="user-photo-box">
-          <img src="images/UserProfile.jpg" class="user-photo" />
-          <div class="bio-container">
-            <p class="user-name">Mirzac Nicolae</p>
-            <p class="user-joined">Joined: July 2023</p>
+            <div class="input-box">
+              <input type="password" placeholder="Password" required />
+              <i class="bx bxs-lock-alt"></i>
+            </div>
+            <div class="Change-Password">
+              <div class="icon-container">
+                <i class="bx bxs-key"></i>
+              </div>
+              <a href="#">Change password</a>
+            </div>
+            <button type="submit" class="btn">Save</button>
+          </form>
+
+          <div class="user-photo-box">
+            <img src="images/UserProfile.jpg" class="user-photo" />
+            <div class="bio-container">
+              <p class="user-name">Mirzac Nicolae</p>
+              <p class="user-joined">Joined: July 2023</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <footer class="footer">
-      <div class="footer-container">
-        <hr />
-        <p>&copy; 2023 MovieNights by Mirzac Nicolae. All rights reserved.</p>
-        <p></p>
-        <p><a href="#">Terms of Service</a></p>
+    <footer class="footer-section">
+      <div class="container">
+        <div class="footer-cta">
+          <div class="row">
+            <div class="col-xl-4 col-md-4 mb-30">
+              <div class="single-cta">
+                <i class="fas fa-map-marker-alt"></i>
+                <div class="cta-text">
+                  <h4>Find us</h4>
+                  <span>Republic of Moldova, Straseni, Cojusna</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-4 col-md-4 mb-30">
+              <div class="single-cta">
+                <i class="fas fa-phone"></i>
+                <div class="cta-text">
+                  <h4>Call us</h4>
+                  <span>07174243535</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-4 col-md-4 mb-30">
+              <div class="single-cta">
+                <i class="far fa-envelope-open"></i>
+                <div class="cta-text">
+                  <h4>Mail us</h4>
+                  <span>MovieNights@info.com</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-content pt-5 pb-5">
+          <div class="row">
+            <div class="col-xl-4 col-lg-4 mb-50">
+              <div class="footer-widget">
+                <div class="footer-logo">
+                  <a href="index.html"
+                    ><img
+                      src="./images/Logo/Logo.png"
+                      class="img-fluid"
+                      alt="logo"
+                  /></a>
+                </div>
+                <div class="footer-text">
+                  <p>
+                    Movie Nights: Your Ultimate Destination for Movie and TV
+                    Show Enthusiasts. Stay up-to-date with the latest in the
+                    world of cinema, access movie information, and share your
+                    thoughts by rating and ranking your favorite films. Join our
+                    community of movie buffs today!
+                  </p>
+                </div>
+                <div class="footer-social-icon">
+                  <span>Follow us</span>
+                  <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                  <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                  <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+              <div class="footer-widget">
+                <div class="footer-widget-heading">
+                  <h3>Resources</h3>
+                </div>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="ContactUs.html">Contact us</a></li>
+                  <li><a href="#">services</a></li>
+                  <li><a href="#">portfolio</a></li>
+                  <li><a href="#">About us</a></li>
+                  <li><a href="#">Our Services</a></li>
+                  <li><a href="#">Expert Team</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+              <div class="footer-widget">
+                <div class="footer-widget-heading">
+                  <h3>Subscribe</h3>
+                </div>
+                <div class="footer-text mb-25">
+                  <p>
+                    Don't miss out on the movie magic! Subscribe below to join
+                    in on the cinematic excitement!
+                  </p>
+                </div>
+                <div class="subscribe-form">
+                  <form action="#">
+                    <input type="text" placeholder="Email Address" />
+                    <button><i class="fab fa-telegram-plane"></i></button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+              <div class="copyright-text">
+                <p>
+                  &copy; 2023 MovieNights by Mirzac Nicolae & Alexandru Donoaga.
+                  All rights reserved.
+                  <!--  <a href="https://codepen.io/anupkumar92/">Anup</a> -->
+                </p>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+              <div class="footer-menu">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="#">Terms</a></li>
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Policy</a></li>
+                  <li><a href="ContactUs.html">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
 
